tests/tema1/06-arithmetic.out
class : CLASS
[@0,0:4='class',<9>,1:0]
A : TYPE_ID
[@1,6:6='A',<24>,1:6]
{ : LBRACE
[@2,8:8='{',<34>,1:8]
n : ID
[@3,14:14='n',<25>,2:4]
: : COLON
[@4,16:16=':',<29>,2:6]
Int : TYPE
[@5,18:20='Int',<22>,2:8]
<- : ASSIGN
[@6,22:23='<-',<31>,2:12]
1 : INT
[@7,25:25='1',<23>,2:15]
+ : PLUS
[@8,27:27='+',<36>,2:17]
2 : INT
[@9,29:29='2',<23>,2:19]
* : MUL
[@10,31:31='*',<38>,2:21]
( : LPAREN
[@11,33:33='(',<32>,2:23]
3 : INT
[@12,34:34='3',<23>,2:24]
+ : PLUS
[@13,36:36='+',<36>,2:26]
4 : INT
[@14,38:38='4',<23>,2:28]
) : RPAREN
[@15,39:39=')',<33>,2:29]
/ : DIV
[@16,41:41='/',<39>,2:31]
( : LPAREN
[@17,43:43='(',<32>,2:33]
5 : INT
[@18,44:44='5',<23>,2:34]
- : MINUS
[@19,46:46='-',<37>,2:36]
~ : NEGATION
[@20,48:48='~',<6>,2:38]
6 : INT
[@21,49:49='6',<23>,2:39]
) : RPAREN
[@22,50:50=')',<33>,2:40]
; : SEMI
[@23,51:51=';',<28>,2:41]
} : RBRACE
[@24,53:53='}',<35>,3:0]
; : SEMI
[@25,54:54=';',<28>,3:1]
<EOF> : EOF
[@26,55:54='<EOF>',<-1>,3:2]
"06-arithmetic.cl", line 2:9, Syntax error: mismatched input 'Int' expecting TYPE_ID
Compilation halted
